--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+@import "primeng/resources/themes/lara-light-blue/theme.css";
+@import "primeng/resources/primeng.css";
+html, body{
+  margin: 10px;
+  background-color: var(--surface-b);
+  font-family:  var(--font-family);
+
+}
+
+.textLayout{
+  color: var(--text-color)
+}
