Se agrega menu usuarios

--- a/src/app/usuarios/components/usuario.component.html
+++ b/src/app/usuarios/components/usuario.component.html
@@ -1,15 +1,15 @@
-<h5>usuario works!</h5>
+<h5>Mantenimiento de usuarios</h5>
 <form (ngSubmit)="saveUsuario()">
   <label for="Nombre">Nombre</label>
   <input
-    type="text"
+    type="text" pInputText
     class="form-control"
     placeholder="Nombre"
     [(ngModel)]="nuevo.nombre"
   />
   <label for="Apellido">Apellido</label>
   <input
-    type="text"
+    type="text" pInputText
     class="form-control"
     placeholder="Apellido"
     [(ngModel)]="nuevo.apellido"
@@ -17,17 +17,19 @@
   <label for="Cedula">Cédula</label>
   <input
     type="text"
+    pInputText
     class="form-control"
     placeholder="Cédula"
     [(ngModel)]="nuevo.ci"
   />
 <label for="fnacimiento">F.Nacimiento</label>
-<input
+<p-calendar
   type="date"
+  pInputDate
   class="form-control"
   placeholder="fnacimiento"
   [(ngModel)]="nuevo.fnacimiento"
->
+></p-calendar>
 <label for="Direccion">Dirección</label>
 <input
   type="text"
